force-app/main/default/objects/Business_Impact_Analysis__c/Business_Impact_Analysis__c.object-meta.xml
<CustomObject>
    <label>Business Impact Analysis</label>
    <nameField>
        <displayFormat>BIA-{000000}</displayFormat>
        <label>Business Impact Analysis ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Impacts Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>