force-app/main/default/objects/Business_Impact_Analysis__c/fields/Balance_Sheet_Reclassification_Impact__c.field-meta.xml
<CustomField>
    <fullName>Balance_Sheet_Reclassification_Impact__c</fullName>
    <label>Balance Sheet Reclassification Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than $500MM</fullName>
            </value>
            <value>
                <fullName>$500MM to &lt;$3B</fullName>
                <label>$500MM to less than $3B</label>
            </value>
            <value>
                <fullName>$3B to &lt;$5B</fullName>
                <label>$3B to less than $5B</label>
            </value>
            <value>
                <fullName>$5B to &lt;$30B</fullName>
                <label>$5B to less than $30B</label>
            </value>
            <value>
                <fullName>&gt;=$30B</fullName>
                <label>Greater than or equal to $30B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>