force-app/main/default/objects/Business_Impact_Analysis__c/fields/BIA_Tier__c.field-meta.xml
<CustomField>
    <fullName>BIA_Tier__c</fullName>
    <formula>IF(ISPICKVAL(Economic_Impact__c, &quot;Lessthan250K&quot;) ||  ISPICKVAL(Economic_Impact__c, &quot;$250Ktolessthan$1MM&quot;) ||  ISPICKVAL(Economic_Impact__c, &quot;$1MMtolessthan$5MM&quot;) ||  ISPICKVAL(Economic_Impact__c, &quot;$$5MM to &lt;$10MM&quot;), &quot;Tier 1 - Aligned&quot;, &quot;Tier 3 - Aligned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BIA Tier</label>
    <type>Text</type>
</CustomField>