force-app/main/default/objects/Business_Impact_Analysis__c/fields/Economic_Impact__c.field-meta.xml
<CustomField>
    <fullName>Economic_Impact__c</fullName>
    <label>Economic Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lessthan250K</fullName>
                <label>Less than $250K</label>
            </value>
            <value>
                <fullName>$250Ktolessthan$1MM</fullName>
                <label>$250K to less than $1MM</label>
            </value>
            <value>
                <fullName>$1MMtolessthan$5MM</fullName>
                <label>$1MM to less than $5MM</label>
            </value>
            <value>
                <fullName>$5MM to &lt;$10MM</fullName>
                <label>$5MM to less than$10MM</label>
            </value>
            <value>
                <fullName>$10MM to &lt;$50MM</fullName>
                <label>$10MM to less than $50MM</label>
            </value>
            <value>
                <fullName>$50MM to &lt;$250MM</fullName>
                <label>$50MM to  less than $250MM</label>
            </value>
            <value>
                <fullName>$250MM to &lt;$1B</fullName>
                <label>$250MM to less than $1B</label>
            </value>
            <value>
                <fullName>&gt;=$1B</fullName>
                <label>Greater than or equal to $1B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>