force-app/main/default/objects/Business_Impact_Analysis__c/fields/FCP_Tier__c.field-meta.xml
<CustomField>
    <fullName>FCP_Tier__c</fullName>
    <formula>IF(ISPICKVAL(Economic_Impact__c, &quot;Lessthan250K&quot;) || ISPICKVAL(Economic_Impact__c, &quot;$250Ktolessthan$1MM&quot;) || ISPICKVAL(Economic_Impact__c, &quot;$1MMtolessthan$5MM&quot;) || ISPICKVAL(Economic_Impact__c, &quot;$$5MM to &lt;$10MM&quot;), &quot;Tier 2 - Aligned&quot;, &quot;Tier 2 - Aligned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCP Tier</label>
    <type>Text</type>
</CustomField>