force-app/main/default/objects/Business_Impact_Analysis__c/fields/P_L_Misstatement_Impact__c.field-meta.xml
<CustomField>
    <fullName>P_L_Misstatement_Impact__c</fullName>
    <label>P&amp;L Misstatement Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than $15MM</fullName>
            </value>
            <value>
                <fullName>$15MM to &lt;$30MM</fullName>
                <label>$15MM to less than $30MM</label>
            </value>
            <value>
                <fullName>$30MM to &lt;$50MM</fullName>
                <label>$30MM to less than $50MM</label>
            </value>
            <value>
                <fullName>$50MM to &lt;$200MM</fullName>
                <label>$50MM to less than $200MM</label>
            </value>
            <value>
                <fullName>$200MM to &lt;$500MM</fullName>
                <label>$200MM to less than $500MM</label>
            </value>
            <value>
                <fullName>Greater than or equal to $500MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>