force-app/main/default/objects/Business_Impact_Analysis__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Business Impacts Analyses</relationshipLabel>
    <relationshipName>Business_Impacts_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>