force-app/main/default/objects/Business_Impact_Analysis__c/fields/Regulatory_Impact__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Impact__c</fullName>
    <label>Regulatory Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not anticipate regulatory findings or disciplinary action.</fullName>
            </value>
            <value>
                <fullName>Possible regulatory issues calling for corrective actions, but do not anticipate material fines or regulatory sanctions against the Firm.</fullName>
            </value>
            <value>
                <fullName>Probable regulatory enforcement or contentious action, including possible sanctions against a specific business activity, product, entity, or region of the Firm.</fullName>
            </value>
            <value>
                <fullName>Notable regulatory enforcement or contentious action, including probable sanctions against the Firm or its Material Entities.</fullName>
            </value>
            <value>
                <fullName>Significant regulatory enforcement / contentious action, including probable sanctions against the Firm or its Material Entities.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>