force-app/main/default/objects/Business_Impact_Analysis__c/fields/Reputational_Impact__c.field-meta.xml
<CustomField>
    <fullName>Reputational_Impact__c</fullName>
    <label>Reputational Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Little or no damage to the perception of Morgan Stanley by external parties, including our shareholders, clients, regulators and the public.</fullName>
            </value>
            <value>
                <fullName>Limited to temporary damage to the perception of Morgan Stanley by external parties, including our shareholders, clients, regulators and the public.</fullName>
            </value>
            <value>
                <fullName>Noticeable damage to the perception of Morgan Stanley by external parties, including our shareholders, clients, regulators and the public.</fullName>
            </value>
            <value>
                <fullName>Significant damage to the perception of Morgan Stanley by external parties, including our shareholders, clients, regulators and the public.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>