force-app/main/default/objects/Business_Impact_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Process__c</columns>
    <columns>BIA_Tier__c</columns>
    <columns>FCP_Tier__c</columns>
    <columns>Front_Office_Aligned_Tier__c</columns>
    <columns>Overall_Functional_Group_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>